[gd_scene load_steps=10 format=3 uid="uid://ch1l0jofkrynh"]

[ext_resource type="Script" path="res://src/shop/shop.gd" id="1_xytou"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_1d7hg"]
[ext_resource type="Texture2D" uid="uid://i3hxrkvy84y4" path="res://assets/custom/Star.png" id="3_54cos"]
[ext_resource type="PackedScene" uid="uid://tj3ktedys5sh" path="res://src/shop/shop_button.tscn" id="4_a7s51"]
[ext_resource type="PackedScene" uid="uid://p2ueg06qde5w" path="res://src/shop/shop_card.tscn" id="5_16agq"]
[ext_resource type="Resource" uid="uid://bx8fp28p3g0k3" path="res://src/cards/data/seed/blueberry.tres" id="6_h3kp4"]
[ext_resource type="PackedScene" uid="uid://c71om0knvcngh" path="res://src/cards/select_card.tscn" id="7_g6flp"]
[ext_resource type="PackedScene" uid="uid://cs4xf7kyndygr" path="res://src/ui/tooltip.tscn" id="8_r2vns"]

[sub_resource type="Theme" id="Theme_55f4u"]

[node name="Shop" type="Node2D"]
z_index = 2
script = ExtResource("1_xytou")

[node name="ClickOutButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1920, 1080)
offset_right = 8.0
offset_bottom = 8.0

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1000.0
offset_bottom = 757.0
theme = ExtResource("2_1d7hg")

[node name="ShopContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
theme = SubResource("Theme_55f4u")

[node name="Header" type="HBoxContainer" parent="PanelContainer/ShopContainer"]
layout_mode = 2

[node name="ShopTitle" type="Label" parent="PanelContainer/ShopContainer/Header"]
layout_mode = 2
text = "Shop"

[node name="MoneyLabel" type="Label" parent="PanelContainer/ShopContainer/Header"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/ShopContainer/Header"]
layout_mode = 2
texture = ExtResource("3_54cos")
expand_mode = 2
stretch_mode = 4

[node name="CloseButton" type="Button" parent="PanelContainer/ShopContainer/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "Close"

[node name="ChoiceOne" type="HBoxContainer" parent="PanelContainer/ShopContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[node name="Stock" type="HBoxContainer" parent="PanelContainer/ShopContainer/ChoiceOne"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Reroll" parent="PanelContainer/ShopContainer/ChoiceOne" instance=ExtResource("4_a7s51")]
layout_mode = 2
text = "Reroll"
cost = -1
row = 1

[node name="ChoiceThree" type="HBoxContainer" parent="PanelContainer/ShopContainer"]
visible = false
layout_mode = 2

[node name="Stock" type="HBoxContainer" parent="PanelContainer/ShopContainer/ChoiceThree"]
layout_mode = 2

[node name="Reroll" parent="PanelContainer/ShopContainer/ChoiceThree" instance=ExtResource("4_a7s51")]
layout_mode = 2
text = "Reroll"
cost = -1
row = 3

[node name="ChoiceTwo" type="HBoxContainer" parent="PanelContainer/ShopContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[node name="Stock" type="HBoxContainer" parent="PanelContainer/ShopContainer/ChoiceTwo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ShopCard" parent="PanelContainer/ShopContainer/ChoiceTwo/Stock" instance=ExtResource("5_16agq")]
layout_mode = 2
card_data = ExtResource("6_h3kp4")

[node name="Reroll" parent="PanelContainer/ShopContainer/ChoiceTwo" instance=ExtResource("4_a7s51")]
layout_mode = 2
text = "Reroll"
cost = -1
row = 2

[node name="RemoveCardContainer" type="PanelContainer" parent="."]
visible = false
theme = ExtResource("2_1d7hg")

[node name="SelectCard" parent="RemoveCardContainer" instance=ExtResource("7_g6flp")]
layout_mode = 2

[node name="Tooltip" parent="." instance=ExtResource("8_r2vns")]
visible = false

[connection signal="pressed" from="ClickOutButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/ShopContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="option_selected" from="PanelContainer/ShopContainer/ChoiceOne/Reroll" to="." method="on_reroll"]
[connection signal="option_selected" from="PanelContainer/ShopContainer/ChoiceThree/Reroll" to="." method="on_reroll"]
[connection signal="option_selected" from="PanelContainer/ShopContainer/ChoiceTwo/Reroll" to="." method="on_reroll"]
[connection signal="select_cancelled" from="RemoveCardContainer/SelectCard" to="." method="_on_card_remove_cancelled"]
